revisado capítulo 12. Alguna corrección en 5 y 11

--- a/html/05_higher_order.html
+++ b/html/05_higher_order.html
@@ -234,7 +234,7 @@ console.log(mapear(rtlScripts, <span class="tok-definition">s</span> =&gt; s.nam
 
 <p><a class="p_ident" id="p-EiDL8H6ZNm" href="#p-EiDL8H6ZNm" tabindex="-1" role="presentation"></a>La operación de orden superior que representa esta idea se llama <em>reduce</em> (a veces también llamada <em>fold</em>). Construye un valor tomando repetidamente un único elemento del array y combinándolo con el valor actual. Al sumar números empezarías con el número cero y añadirías cada elemento a la suma.</p>
 
-<p><a class="p_ident" id="p-zhoVactJlx" href="#p-zhoVactJlx" tabindex="-1" role="presentation"></a>Los parámetros de <code>reduce</code> son, además del array, una función de combinación y un valor inicial. Esta función es un poco menos directa que <code>filter</code> y <code>map</code>, así que obsérva detenidamente:</p>
+<p><a class="p_ident" id="p-ON8Z05D/At" href="#p-ON8Z05D/At" tabindex="-1" role="presentation"></a>Los parámetros de <code>reduce</code> son, además del array, una función de combinación y un valor inicial. Esta función es un poco menos directa que <code>filter</code> y <code>map</code>, así que observa detenidamente:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-MPEcux0ztP" href="#c-MPEcux0ztP" tabindex="-1" role="presentation"></a><span class="tok-keyword">function</span> <span class="tok-definition">reducir</span>(<span class="tok-definition">array</span>, <span class="tok-definition">combinación</span>, <span class="tok-definition">principio</span>) {
   <span class="tok-keyword">let</span> <span class="tok-definition">actual</span> = inicio;
